# NotchBar

./: README.md
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yml
NotchBar/: AppDelegate.swift  ContentView.swift  Helpers.swift  MediaRemote.swift  NotchPanel.swift  NotchWindow.swift  Shared.swift  ViewController.swift  Window.swift  main.swift
NotchBar.xcodeproj/: project.pbxproj
NotchBar.xcodeproj/xcshareddata/xcschemes/: NotchBar.xcscheme
NotchBar/Assets.xcassets/AccentColor.colorset/: Contents.json
NotchBar/Base.lproj/: Main.storyboard
NotchBar/Data/: ActiveAppData.swift  MediaRemoteData.swift  SystemInfoData.swift
NotchBar/Extensions/: AnimatedNumbers.swift  BuiltInScreen.swift  CardinalAngles.swift  InvertedBottomCorners.swift  NotchFrame.swift  SystemInfoKit.swift  ViewGeometry.swift  ViewInvertedBottomCorners.swift
NotchBar/Views/: ContentView.swift  NotchBar.swift
NotchBar/Widgets/: ActiveApp.swift  MediaRemote.swift  SystemInfo.swift
NotchBar/src-tauri/: Cargo.toml
_assets/icon/dark/: AppIcon.icns
_assets/icon/light/: AppIcon.icns
src/: Project.swift
src/NotchBar/Sources/: AppDefaults.swift  AppDelegate.swift  AppState.swift  AppUrls.swift  AppView.swift  AppWindow.swift  BarView.swift  ContentView.swift  Helpers.swift  NotchBarApp.swift  SystemState.swift  main.swift
src/NotchBar/Sources/BarViews/: BarLayoutView.swift  (+1 more)
src/NotchBar/Tests/: NotchBarTests.swift
src/Tuist/: Config.swift  Package.resolved  Package.swift
swift/: Project.swift  README.md
swift/NotchBar/Sources/: AppDelegate.swift  Helpers.swift  SystemState.swift  main.swift
swift/Tuist/: Package.resolved  Package.swift
tauri/: .prettierrc  README.md  components.json  eslint.config.js  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
tauri/src/: app.css  app.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs  main.rs  ns_screen.rs  utils.rs
tauri/src/routes/: +layout.svelte  +layout.ts  +page.svelte  Titlebar.svelte
(+47 files in other folders)
