# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "NotchBar"
edition = "2024"

[lib]
name = "notchbar"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# https://corrode.dev/blog/tips-for-faster-rust-compile-times/#turn-off-debuginfo
[profile.dev]
debug = 0
