# https://doc.rust-lang.org/cargo/reference/manifest.html
#:schema https://json.schemastore.org/cargo.json

[package]
name = "NotchBar"
edition = "2024"

[lib]
name = "notchbar"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# https://corrode.dev/blog/tips-for-faster-rust-compile-times/#turn-off-debuginfo
[profile.dev]
debug = 0
