# https://doc.rust-lang.org/cargo/reference/manifest.html
#:schema https://json.schemastore.org/cargo.json

[package]
# macOS dock icon name
name = "NotchBar"
edition = "2024"

[lib]
name = "notchbar"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cocoa = "0.26.0" # https://tauri.app/learn/window-customization/#macos-transparent-titlebar-with-custom-window-background-color
core-graphics = "0.24.0"
objc = "0.2.7"
objc2-foundation = "0.3.0"


# https://corrode.dev/blog/tips-for-faster-rust-compile-times/#turn-off-debuginfo
[profile.dev]
debug = 0
